new data version, exlcude two failing tests due to missing trip data